# secure-bridge

./: Readme.md
secure-bridge-lib/: CHANGELOG.md  Readme.md  USAGE_GUIDE.md  example.ts  index.test.ts  index.ts  package.json
verification-service/: .dockerignore  .gitignore  Dockerfile  Readme.md  compose.yml  docker-compose.yml  makefile  pyproject.toml
verification-service/app/: config.py  database.py  main.py  repository.py  schemas.py
verification-service/keys/: .gitignore  .gitkeep
