[tool.poetry]
name = "verification-service"
version = "0.1.0"
description = "Secure verification service with hybrid encryption and blind indexing"
authors = ["Panachai <panachai.ny@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
cryptography = "^41.0.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
requests = "^2.31.0"
black = "^26.1.0"
isort = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
